# salve

./: CMakeLists.txt  README  README.markdown
gtest-1.6.0/: CMakeLists.txt  CMakeLists.txt~
src/: FCPP.hpp  FMap.hpp  testCanBuildFrom.cpp  testComparable.cpp  testContains.cpp  testFMap.cpp  testFunctor.cpp  testSeq.cpp  testShowable.cpp  typeclasses.hpp
src/salve/: CanBuildFrom.hpp  Comparable.hpp  Contains.hpp  Functor.hpp  Seq.hpp  Showable.hpp  asserts.hpp  collections.hpp  l2Distance.hpp  macros.hpp  salve.hpp
src/salve/opencv/: Functor.hpp  l2Distance.hpp  salve.hpp  showable.hpp
test/: testAsserts.cpp  testCanBuildFrom.cpp  testComparable.cpp  testFunctor.cpp  testL2Distance.cpp  testSeq.cpp  testShowable.cpp
test/opencv/: testFunctor.cpp  testL2Distance.cpp  testShowable.cpp
